platform/kustomize/api/production/deployment_minio_secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alice
spec:
  template:
    spec:
      containers:
        - name: alice
