platform/kustomize/api/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: alice
spec:
  rules:
    - host: api.igiari.net
      http:
        paths:
          - backend:
              serviceName: alice
              servicePort: 80
            path: /
